libs/preprocessor/tests/errors/pe12_include_not_found/stderr.ansi
[0m[1m[38;5;9merror[PE12][0m[1m: include not found[0m
  [0m[34m┌─[0m source.hpp:2:11
  [0m[34m│[0m
[0m[34m2[0m [0m[34m│[0m #include <[0m[31msomething.hpp[0m>
  [0m[34m│[0m           [0m[31m^^^^^^^^^^^^^[0m [0m[31mnot found[0m

